Advance updated commit

--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -8,22 +8,31 @@ output:
 
 ## Loading and preprocessing the data
 ```{r load, cache=TRUE, echo=TRUE}
+wdir <- getwd()
+if (wdir != "E:/Luciano/R_WorkingDir/Reproducible Research/RepData_PeerAssessment1"){
+    setwd("E:/Luciano/R_WorkingDir/Reproducible Research/RepData_PeerAssessment1")
+}
 rm(list = ls())
 listfiles <- dir()
 if ("activity.csv" %in% listfiles){
     actdf <- read.csv("activity.csv")
+    newdf <- na.omit(actdf)
 }else{
     if ("activity.zip" %in% listfiles){
         unzip(zipfile = "activity.zip")
         actdf <- read.csv("activity.csv") 
+        newdf <- na.omit(actdf)
     }else{
         print("No files found!!!")
     }
-}ac
+}
 ```
 
 
 ## What is mean total number of steps taken per day?
+- Update total steps per day.
+- Show histogram with totals steps per day.
+- Calculate mean and median of steps per day
 ```{r hist, echo=TRUE}
 instpackages <- installed.packages()
 if (("ggplot2" %in% instpackages)){
@@ -32,8 +41,20 @@ if (("ggplot2" %in% instpackages)){
     install.packages("ggplot2")
     library(ggplot2)
 }
+totaldays <- tapply(newdf$steps, newdf$date, FUN = sum)
+hist(totaldays, main = "Histogram of the total number of steps", 
+     xlab = "Total number of steps taken each day", 
+     col = "grey", border = "green")
+meansteps <- mean(totaldays, na.rm = TRUE)
+mediansteps <- median(totaldays, na.rm = TRUE)
+abline(v = meansteps, col = "royalblue", lwd = 2)
+abline(v = mediansteps, col = "red", lwd = 2)
+legend("topright", c("- Median", "- Mean"), fill = c("royalblue", "red"))
+box()
 ```
 
+- **Mean: ** `r meansteps`
+- **Median: ** `r mediansteps`
 
 ## What is the average daily activity pattern?
 
