--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -34,13 +34,13 @@ if ("activity.csv" %in% listfiles){
 - Show histogram with totals steps per day.
 - Calculate mean and median of steps per day
 ```{r hist, echo=TRUE}
-instpackages <- installed.packages()
-if (("ggplot2" %in% instpackages)){
-    library(ggplot2)
-}else{
-    install.packages("ggplot2")
-    library(ggplot2)
-}
+# instpackages <- installed.packages()
+# if (("ggplot2" %in% instpackages)){
+#     library(ggplot2)
+# }else{
+#     install.packages("ggplot2")
+#     library(ggplot2)
+# }
 totaldays <- tapply(newdf$steps, newdf$date, FUN = sum)
 hist(totaldays, main = "Histogram of the total number of steps", 
      xlab = "Total number of steps taken each day", 
@@ -102,7 +102,7 @@ diffmedian <- (newmediansteps - mediansteps)
 - **Mean: ** `r newmeansteps` before `r meansteps`
     - Difference in the mean is: `r diffmean`
 - **Median: ** `r newmediansteps` before `r mediansteps`
-    - Difference in the medain is: `r diffmedian`
+    - Difference in the median is: `r diffmedian`
 
 ## Are there differences in activity patterns between weekdays and weekends?
 - Create a factor to separeate weekdays and weekends
@@ -110,5 +110,14 @@ diffmedian <- (newmediansteps - mediansteps)
 wend <- c("Saturday", "Sunday")
 newactdf$weekend <- factor((weekdays(as.Date(newactdf$date)) %in% wend), 
                            levels = c(FALSE, TRUE), labels = c("weekday", "weekend"))
+wenddata <- newactdf[newactdf$weekend == "weekend",]
+wdaydata <- newactdf[newactdf$weekend == "weekday",]
+newwendsteps <- with(wenddata, aggregate(steps ~ interval, wenddata, mean))
+newwdaysteps <- with(wdaydata, aggregate(steps ~ interval, wdaydata, mean))
+par(mfrow = c(1,2))
+plot(newwendsteps, main = "Weekend",type = "l", col = "blue")
+plot(newwdaysteps, main = "Weekday", type = "l", col = "red")
 
 ```
+
+- On weekend people have more free time and can perform activity with higher intervals
